--- a/machine.html
+++ b/machine.html
@@ -82,7 +82,7 @@ Company' 50 Most Innovative Companies ranking. Our Data Scientist Chapter?...</p
 <p><span class="badge badge-light">San Francisco, California</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://smartnews.workable.com/j/5C242329AD'>SmartNews, Inc. - Jobs: Staff Machine Learning Scientist, AI Foundation - Apply online</a></h5> 
+<h5><a href='https://smartnews.workable.com/j/5C242329AD'>SmartNews, Inc. - Jobs: Staff Machine Learning Scientist, AI Foundation - Apply online</a></h5> 
 <p><span class="badge badge-light">San Francisco, California</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -107,7 +107,7 @@ riskmethods.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<h5><a href='https://so1.join.com/jobs/258010-machine-learning-engineer-m-f-x'>Job @ SO1 (Berlin): Machine Learning Engineer (m/f/x) | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://so1.join.com/jobs/258010-machine-learning-engineer-m-f-x'>Job @ SO1 (Berlin): Machine Learning Engineer (m/f/x) | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -174,7 +174,7 @@ Engineering - Infrastructure. Full-time. Submit your application. Resume/CV ?.</
 <p><span class="badge badge-light">Lisbon, Portugal</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://genie-ai.workable.com/j/EAC94C73A0'>Genie AI - Jobs: Machine Learning Researcher - Apply online</a></h5> 
+<h5><a href='https://genie-ai.workable.com/j/EAC94C73A0'>Genie AI - Jobs: Machine Learning Researcher - Apply online</a></h5> 
 <p><span class="badge badge-light">London, England, United Kingdom</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -239,7 +239,7 @@ team at Vimeo is building AI-driven tools to help anyone who wants to make a?...
 <p>1 day ago ... Description. Machine Learning / Artificial Intelligence Engineer. Are you ready for 
 a career change to somewhere where you can really make a difference,?...</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/centralway/job/oNrsafwA'>Numbrs Personal Finance AG Careers - Machine Learning Engineer ...</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/centralway/job/oNrsafwA'>Numbrs Personal Finance AG Careers - Machine Learning Engineer ...</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>3 days ago ... Numbrs engineers are innovators, problem-solvers, and hard-workers who are 
 building solutions in big data, mobile technology and much more. We look for?...</p>
@@ -253,7 +253,7 @@ Jose (CA); Contract Senior Consultant, Adaptive Insights - Financial Planning?..
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
-<h5><a href='https://smartnews.workable.com/j/F23013344B'>SmartNews, Inc. - Jobs: Principal/Senior Staff Software Engineer, Applied Machine Learning - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://smartnews.workable.com/j/F23013344B'>SmartNews, Inc. - Jobs: Principal/Senior Staff Software Engineer, Applied Machine Learning - Apply online</a></h5> 
 <p><span class="badge badge-light">San Francisco, California</span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
@@ -363,7 +363,7 @@ Prior strong expertise and experience in machine learning and data science?...</
 <p><span class="badge badge-light">Hamburg, Germany</span></p>
 <p>Posted on: 2019-07-18</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/ava/b5801683-d955-4c8f-bbb7-1012a3b83adf'>Ava - Machine Learning Engineer</a></h5> 
+<h5><a href='https://jobs.lever.co/ava/b5801683-d955-4c8f-bbb7-1012a3b83adf'>Ava - Machine Learning Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 9, 2019 ... Interested to learn more about it? Let's chat. Especially if: - Research experience 
 in algorithms and specifically Machine Learning (including Deep Learning).</p>
@@ -426,7 +426,7 @@ Position] at Mercari, inc.</p>
 <p><span class="badge badge-light">San Francisco</span></p>
 <p>Posted on: 2019-07-16</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/glovo/jobs/4354654002'>Job Application for Senior Backend Engineer - Machine Learning Platform at Glovo</a></h5> 
+<h5><a href='https://boards.greenhouse.io/glovo/jobs/4354654002'>Job Application for Senior Backend Engineer - Machine Learning Platform at Glovo</a></h5> 
 <p><span class="badge badge-light">Barcelona Barcelona</span></p>
 <p>Posted on: 2019-07-16</p>
 <hr/>
