--- a/product-manager.html
+++ b/product-manager.html
@@ -40,6 +40,10 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='http://jobs.jobvite.com/samsungssi/job/ozshafwc'>Samsung Semiconductor, Inc. Careers - Product Designer - Product Ideation group</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-29</p>
+<hr/>
 <h5><a href='https://wearebuilders.recruitee.com/o/digital-product-designer-en-nl'>
       Digital Product Designer [EN] [NL] - We Are Builders
     </a></h5> 
@@ -78,7 +82,7 @@
 <p><span class="badge badge-light">Palo Alto, California</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qfnaVfwr&k=Job&j=ovgBafwg&__jvst=Employee&__jvsd=sGgJ2hwt&__jvsc=Twitter&bid=nutkWLwt'>Ingram Micro Careers - Sr Product Manager-USA</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qfnaVfwr&k=Job&j=ovgBafwg&__jvst=Employee&__jvsd=sGgJ2hwt&__jvsc=Twitter&bid=nutkWLwt'>Ingram Micro Careers - Sr Product Manager-USA</a></h5> 
 <p><span class="badge badge-light">Irvine California</span></p>
 <p>Posted on:: 2019-07-28</p>
 <hr/>
@@ -86,7 +90,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/carta/111029b9-b725-4c67-beb2-ddd28e6fe8dc'>Carta - Product Manager+, Public Securities Brokerage</a></h5> 
+<h5><a href='https://jobs.lever.co/carta/111029b9-b725-4c67-beb2-ddd28e6fe8dc'>Carta - Product Manager+, Public Securities Brokerage</a></h5> 
 <p><span class="badge badge-light">New York City, NY</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
@@ -104,7 +108,7 @@
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/pitchbook/job/oCqEafwA'>PitchBook Data, Inc. Careers - Product Manager, Data</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/pitchbook/job/oCqEafwA'>PitchBook Data, Inc. Careers - Product Manager, Data</a></h5> 
 <p><span class="badge badge-light">Seattle Seattle San Francisco New York London Mumbai</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
@@ -128,7 +132,7 @@
 <p><span class="badge badge-light">Ontario, Canada</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://generali-global-health-services.workable.com/j/FDD22B7D70'>Generali Global Health Services - Jobs: Product Owner, Digital Transformation - Apply online</a></h5> 
+<h5><a href='https://generali-global-health-services.workable.com/j/FDD22B7D70'>Generali Global Health Services - Jobs: Product Owner, Digital Transformation - Apply online</a></h5> 
 <p><span class="badge badge-light">Ontario, Canada</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
@@ -188,7 +192,7 @@ design solutions to our customer problems. Create user stories that communicate
 <p><span class="badge badge-light">Los Angeles, CA</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/quantcast/cea54067-a1ce-44ea-8761-ab0ceaedfcbd'>Quantcast - Product Manager/Senior Product Manager, Targeting</a></h5> 
+<h5><a href='https://jobs.lever.co/quantcast/cea54067-a1ce-44ea-8761-ab0ceaedfcbd'>Quantcast - Product Manager/Senior Product Manager, Targeting</a></h5> 
 <p><span class="badge badge-light">San Francisco</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
@@ -243,7 +247,7 @@ closely with internal and external cross-functional stakeholders, you will ident
 <p><span class="badge badge-light">Seattle, Washington</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://rocketsofawesome.recruiterbox.com/jobs/fk0317d'>
+<h5><a href='http://rocketsofawesome.recruiterbox.com/jobs/fk0317d'>
     Associate Product Manager at Rockets of Awesome
 </a></h5> 
 <p><span class="badge badge-light"></span></p>
@@ -282,11 +286,11 @@ in Syracuse, New York. Review all of the job details and apply today!</p>
 <p><span class="badge badge-light">Canada</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://seequent.workable.com/j/8C127AACCE'>Seequent - Jobs: Product Owner - Apply online</a></h5> 
+<h5><a href='https://seequent.workable.com/j/8C127AACCE'>Seequent - Jobs: Product Owner - Apply online</a></h5> 
 <p><span class="badge badge-light">Toronto, Ontario, Canada</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/starry/jobs/4370604002'>Job Application for Product Manager at Starry</a></h5> 
+<h5><a href='https://boards.greenhouse.io/starry/jobs/4370604002'>Job Application for Product Manager at Starry</a></h5> 
 <p><span class="badge badge-light">Boston, Massachusetts</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -310,7 +314,7 @@ in Syracuse, New York. Review all of the job details and apply today!</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/automationanywhere/job/oMHBafwY'>Automation Anywhere Careers - Product Manager</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/automationanywhere/job/oMHBafwY'>Automation Anywhere Careers - Product Manager</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -319,7 +323,7 @@ in Syracuse, New York. Review all of the job details and apply today!</p>
 <p>6 days ago ... ... goals; Collect and organize product feedback from customer surveys, customer 
 support, sales, marketing, and system usage data provided by development?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://flowtify.recruiterbox.com/jobs/fk0jqzl/'>
+<h5><a href='https://flowtify.recruiterbox.com/jobs/fk0jqzl/'>
     Product Owner (m/w/d) at Flowtify GmbH
 </a></h5> 
 <p><span class="badge badge-light"></span></p>
@@ -373,7 +377,7 @@ published: 12.04.2019). Apply now or check the other available jobs.</p>
 <p><span class="badge badge-light">Sofia City Province, Bulgaria</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/incorta/de29ffd3-4e11-4e1a-85bb-12544e2c49d8'>Incorta - Sr Product Manager</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/incorta/de29ffd3-4e11-4e1a-85bb-12544e2c49d8'>Incorta - Sr Product Manager</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -417,11 +421,11 @@ published: 12.04.2019). Apply now or check the other available jobs.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='https://kochcareers.referrals.selectminds.com/jobs/product-manager-for-separation-technology-31322'>Product Manager for Separation Technology - Koch Industries Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://kochcareers.referrals.selectminds.com/jobs/product-manager-for-separation-technology-31322'>Product Manager for Separation Technology - Koch Industries Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/GuardantHealth/743999692275462-software-product-manager-redwood-city-ca'>Guardant Health Software Product Manager, Redwood City, CA | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/GuardantHealth/743999692275462-software-product-manager-redwood-city-ca'>Guardant Health Software Product Manager, Redwood City, CA | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -465,10 +469,6 @@ published: 12.04.2019). Apply now or check the other available jobs.</p>
 <hr/>
 <h5><a href='http://jobs.jobvite.com/forescout/job/oxGDafwK'>Forescout Technologies Inc. Careers - IoT Security Product Owner</a></h5> 
 <p><span class="badge badge-light">Tel Aviv</span></p>
-<p>Posted on: 2019-07-27</p>
-<hr/>
-<h5><a href='https://boards.greenhouse.io/clear/jobs/1793103'>Job Application for Product Designer- Contract at CLEAR - Corporate</a></h5> 
-<p><span class="badge badge-light">New York, United States</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
 
